# cmake-starter

./: .gitignore  CMakeLists.txt  init.sh  main.cc  make.sh
